# lemon-mlx-engine

./: .gitignore  .pr_agent.toml  AGENTS.md  BUILDING_MLX_ENGINE_WITH_ROCM_ON_UBUNTU.md  CMakeLists.txt  GRAPH_DECODE_PLAN.md  GRAPH_PREFILL_PLAN.md  GRAPH_REUSE_PLAN.md  HIP_GRAPH_REUSE_REPORT.md  HIP_KV_FINDINGS.md  README.md  REMOVE_DEAD_GRAPH_CODE_PLAN.md  RESUME_GRAPH_DECODE.md  ROCM_GRAPH_BACKEND_PLAN.md  STATUS.md  UPSTREAM_ISSUES.md  benchmark_all.sh  benchmark_tb5.sh  ci_local.sh  mtp_circular_test.sh  pre_push.sh  qwen36_mtp_circular_test.sh  run-pr-agent.sh  swap_npu.sh  thinking_mode_test.sh
.github/: rocm-channels.json
.github/actions/test-mlx-engine-build/: action.yml
.github/workflows/: build-mlx-engine.yml  pr-agent-review.yml  pr-agent.yml  sync-upstream.yml  test-mlx-engine.yml  upstream-issues-watch.yml
audit_logs/: author_attribution_verify.md  author_check_request.md
build_clean/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_clean/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ci/: resolve-rocm-version.sh
docs/: FIX_AND_VERIFY_GUIDE.md  ISSUE_OPENWEBUI_GIBBERISH_KV_ANALYSIS.md  LEMONADE_MLX_TOOLS_STATUS_AND_NEXT.md  LOOP_STATUS.md  OWUI_OPS_CHECKLIST.md  phase-memory-pools.md
docs/experiments/gdn-materialize-2026-07-19/: RESULTS.md
docs/experiments/gibberish-isolation-2026-07-19/: ALL_RESPONSES.json  INDEX.md  RESULTS.md  meta.jsonl  run_ladder.sh
docs/experiments/gibberish-isolation-2026-07-19/logs/: runner.pid  server.pid
docs/experiments/gibberish-isolation-2026-07-19/raw/: L0-long-wave.json  L0-short-maxwell.json  L1-long-wave.json  L1-short-maxwell.json  L2-long-wave.json  L2-short-maxwell.json  L3-long-thinking.json  L3-short-thinking.json  l0-long-math.json  l0-maxwell.json  l2-maxwell.json
docs/experiments/gibberish-isolation-thinking-on-2026-07-19/: ALL_THINKING_ON_RESPONSES.json  CLARIFICATION_NOT_CLEAN.md  COMPARISON_FEAT_VS_MAIN.md  INDEX.md  feat-runner.pid  main-runner.pid  run_thinking_ladder.sh
docs/experiments/gibberish-isolation-thinking-on-2026-07-19/feat/: RESULTS.md  meta.jsonl
docs/experiments/gibberish-isolation-thinking-on-2026-07-19/main/: RESULTS.md  meta.jsonl
docs/experiments/gibberish-isolation-thinking-on-2026-07-19/main-build-method/: METHOD.md  main_sha.txt
docs/experiments/mlx-need-confirm-2026-07-19/: MLX_PR_NEED_CONFIRMATION.md  meta.env
docs/experiments/verify-eager-no-mtp-2026-07-19/: RESULTS.md  meta.jsonl
docs/experiments/verify-loop10-pin/: RESULTS.md
docs/experiments/verify-loop11-ci-smoke/: RESULTS.md
docs/experiments/verify-loop12-dual-ci/: RESULTS.md
docs/experiments/verify-loop4-smoke/: RESULTS.md  server.pid
docs/experiments/verify-loop5-load/: RESULTS.md  chat-ok.json  gdb.txt  gdb2.txt  server-final.pid  server-ok.pid  server-smoke.pid  server.pid  server2.pid
docs/experiments/verify-loop6-smoke/: RESULTS.md  chat.pid  gdb-load.txt  server.pid
docs/experiments/verify-loop7-owui/: RESULTS.md
docs/experiments/verify-loop8-load/: RESULTS.md  server.pid
docs/experiments/verify-loop9-mlx-ownership/: RESULTS.md
docs/npu/: HANDOFF-NPU-OPTIMIZATION.md  INT8-HANDOFF.md  REDDIT_POST.md
docs/superpowers/plans/: 2026-06-26-npu-ternary-dispatch.md  2026-06-29-bitnet-decode-layer-xclbin.md  2026-06-29-npu-backend-cpp.md
docs/superpowers/specs/: 2026-06-25-universal-hf-loading-design.md  2026-06-26-npu-ternary-dispatch-design.md  2026-06-26-universal-1bit-support.md  2026-06-29-npu-unified-plane-backend.md
examples/: chat.cpp  convert.cpp  diagnose.cpp  graph_probe.cpp  server.cpp  test_arena.cpp  test_device_kv.cpp  test_device_rope.cpp  test_donate.cpp  test_dynslice.cpp  test_gdn.cpp  test_graph_attn.cpp  test_graph_const.cpp  test_graph_counter.cpp  test_graph_inc.cpp  test_graph_kv_advance.cpp  test_memory_phase.cpp  test_npu.cpp  test_qbits.cpp  test_sdpa_ref.cpp
include/mlx-lm/common/: activations.h  base_config.h  bitnet_utils.h  chat_session.h  gated_delta.h  generate.h  generate_params.h  gguf_loader.h  gpu_stubs.h  graph_decode.h  kv_cache.h  language_model.h  memory_phase.h  model_container.h  model_manager.h  mtp_delta_kernel.h  openai_types.h  quantize_utils.h  quantized_linear.h  registry.h  stop_sequences.h  switch_layers.h  thinking_budget.h  tokenizer.h  types.h
include/mlx-lm/llm/: llm_factory.h
include/mlx-lm/llm/models/: bitnet.h  gemma4.h  (+10 more)
include/mlx-lm/npu/: npu_backend.h
patches/: mlx-rocm-build.patch  mlx-rocm-fixes.patch  mlx-rocm-hip-rdc.patch  mlx-rocm-skip-graph.patch
src/common/: base_config.cpp  chat_session.cpp  chat_template.cpp  gated_delta.cpp  generate.cpp  gguf_loader.cpp  gpu_stubs.cpp  graph_decode.cpp  hub_api.cpp  kv_cache.cpp  model_manager.cpp  mtp_delta_kernel.cpp  quantize_utils.cpp  registry.cpp  rope_utils.cpp  safetensors.cpp  server.cpp  switch_layers.cpp  tokenizer.cpp  tool_calling.cpp
src/common/patched/: minja.hpp
src/llm/: llm_factory.cpp
src/llm/models/: afmoe.cpp  apertus.cpp  baichuan_m1.cpp  bailing_moe.cpp  bitnet.cpp  cohere.cpp  deepseek_v3.cpp  ernie4_5.cpp  exaone4.cpp  falcon_h1.cpp  gemma.cpp  gemma2.cpp  gemma3_text.cpp  gemma3n_text.cpp  gemma4.cpp  glm4.cpp  glm4_moe.cpp  glm4_moe_lite.cpp  gptoss.cpp  granite.cpp  granite_moe_hybrid.cpp  internlm2.cpp  jamba.cpp  lfm2.cpp  lfm2_moe.cpp  lille130m.cpp  llama.cpp  mimo.cpp  minicpm.cpp  mistral3_text.cpp  mtp_head.cpp  mtp_moe.cpp  olmo2.cpp  olmo3.cpp  olmoe.cpp  openelm.cpp  phi.cpp  phi3.cpp  phimoe.cpp  qwen2.cpp  (+7 more)
src/npu/: force_f32_scan.hip  npu_backend.cpp  npu_jit.py
src/npu/kernels/: gemv_aie_mmul.cpp  npu_gemm.cc  npu_gemm.xclbin  ternary_gemv.py  ternary_gemv_aie.cpp
src/vlm/: vlm_factory.cpp
src/vlm/models/: gemma3.cpp  lfm2_vl.cpp  qwen35_vl.cpp
tests/: CMakeLists.txt  test_bitnet_quant.cpp  test_chat_session.cpp  test_chat_template.cpp  test_config.cpp  test_generate.cpp  test_kv_cache.cpp  test_server_api.cpp  test_stop_sequences.cpp  test_thinking_budget.cpp  test_tool_calling.cpp
tools/: convert_olmo.py
(+35 files in other folders)
